// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoSave> renders correctly 1`] = `null`;

exports[`<CheckBox> renders correctly 1`] = `
<label
  className="sc-EHOje fvYDam"
>
  <input
    aria-invalid={false}
    checked={false}
    className="sc-bxivhb kcGHbr"
    name="checkbox"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
    value="a"
  />
  <span
    className="sc-ifAKCX fzxfPR"
  >
    A
  </span>
</label>
`;

exports[`<Form> renders correctly 1`] = `"Alo"`;

exports[`<Radio> renders correctly 1`] = `
<label
  className="sc-htoDjs eSGnlp"
>
  <input
    aria-invalid={false}
    checked={false}
    className="sc-bZQynM gIZEjL"
    name="radio"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value="a"
  />
  <span
    className="sc-gzVnrw gyPiNS"
  >
    A
  </span>
</label>
`;

exports[`<Select> renders correctly 1`] = `
<select
  aria-invalid={false}
  className="sc-htpNat kJTMDS"
  name="select"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  theme={
    Object {
      "breakpoints": Object {
        "phone": 376,
        "tablet": 768,
      },
      "colors": Object {
        "black": "#000",
        "grey100": "#f5f5f5",
        "grey200": "#eeeeee",
        "grey300": "#e0e0e0",
        "grey400": "#bdbdbd",
        "grey50": "#fafafa",
        "grey500": "#9e9e9e",
        "grey600": "#757575",
        "grey700": "#616161",
        "grey800": "#424242",
        "grey900": "#212121",
        "pink100": "#f8bbd0",
        "pink200": "#f48fb1",
        "pink300": "#f06292",
        "pink400": "#ec407a",
        "pink50": "#fce4ec",
        "pink500": "#e91e63",
        "pink600": "#d81b60",
        "pink700": "#c2185b",
        "pink800": "#ad1457",
        "pink900": "#880e4f",
        "white": "#fff",
      },
      "dimensions": Object {
        "sidebarWidth": 280,
      },
      "fonts": Object {
        "sans": "\\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      },
      "zIndex": Object {
        "loading": 101,
        "modal": 100,
      },
    }
  }
  type="select"
  value=""
>
  <option
    value="a"
  >
    A
  </option>
  <option
    value="b"
  >
    B
  </option>
  <option
    value="c"
  >
    C
  </option>
</select>
`;

exports[`<SubmitError> renders correctly 1`] = `null`;

exports[`<TextArea> renders correctly 1`] = `
<textarea
  aria-invalid={false}
  className="sc-bwzfXH drHNLl"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  theme={
    Object {
      "breakpoints": Object {
        "phone": 376,
        "tablet": 768,
      },
      "colors": Object {
        "black": "#000",
        "grey100": "#f5f5f5",
        "grey200": "#eeeeee",
        "grey300": "#e0e0e0",
        "grey400": "#bdbdbd",
        "grey50": "#fafafa",
        "grey500": "#9e9e9e",
        "grey600": "#757575",
        "grey700": "#616161",
        "grey800": "#424242",
        "grey900": "#212121",
        "pink100": "#f8bbd0",
        "pink200": "#f48fb1",
        "pink300": "#f06292",
        "pink400": "#ec407a",
        "pink50": "#fce4ec",
        "pink500": "#e91e63",
        "pink600": "#d81b60",
        "pink700": "#c2185b",
        "pink800": "#ad1457",
        "pink900": "#880e4f",
        "white": "#fff",
      },
      "dimensions": Object {
        "sidebarWidth": 280,
      },
      "fonts": Object {
        "sans": "\\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      },
      "zIndex": Object {
        "loading": 101,
        "modal": 100,
      },
    }
  }
  value=""
/>
`;

exports[`<TextField> renders correctly 1`] = `
<input
  aria-invalid={false}
  className="sc-bdVaJa chZRqM"
  name="textfield"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  theme={
    Object {
      "breakpoints": Object {
        "phone": 376,
        "tablet": 768,
      },
      "colors": Object {
        "black": "#000",
        "grey100": "#f5f5f5",
        "grey200": "#eeeeee",
        "grey300": "#e0e0e0",
        "grey400": "#bdbdbd",
        "grey50": "#fafafa",
        "grey500": "#9e9e9e",
        "grey600": "#757575",
        "grey700": "#616161",
        "grey800": "#424242",
        "grey900": "#212121",
        "pink100": "#f8bbd0",
        "pink200": "#f48fb1",
        "pink300": "#f06292",
        "pink400": "#ec407a",
        "pink50": "#fce4ec",
        "pink500": "#e91e63",
        "pink600": "#d81b60",
        "pink700": "#c2185b",
        "pink800": "#ad1457",
        "pink900": "#880e4f",
        "white": "#fff",
      },
      "dimensions": Object {
        "sidebarWidth": 280,
      },
      "fonts": Object {
        "sans": "\\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      },
      "zIndex": Object {
        "loading": 101,
        "modal": 100,
      },
    }
  }
  type="text"
  value=""
/>
`;

exports[`<ValidationError> renders correctly 1`] = `null`;
